# temporary

eye_control/: CMakeLists.txt
eye_control/spikes/control_opencv/: main.cpp
eye_control/spikes/convolution_operator/: main.cpp  profiler.cpp  profiler.h
eye_control/spikes/online_processing/: main.cpp
eye_control/src/: deprecated.cpp  eye_roi.cpp  eye_roi.h  face_detector.cpp  face_detector.h  landmark_detector.cpp  landmark_detector.h  main.cpp  utils.cpp  utils.h
